<resources>

    <string name="app_name">Bitcoin2USD</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Bitcoin2USD</string>
<string name="start_here">Start Here</string>
    <string name="developer">Developer</string>
    <string name="quit">Quit</string>
    <string name="home">home</string>
    <string name="main_logo">Bitcoin2USD</string>
    <string name="fragment_b">fragment_b</string>
    <string name="fragment_c">fragment_c</string>
    <string name="fragment_a">fragment_a</string>
    <string name="enter_number_of_bitcoins">Enter number of bitcoins</string>
    <string name="times_by">times by</string>
    <string name="dollor">dollor</string>
    
    
    
</resources>